--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -66,8 +66,8 @@
 
             <ImageView
                 android:id="@+id/humo_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="216dp"
+                android:layout_height="216dp"
                 android:src="@drawable/humo_perevod"
                 app:layout_constraintEnd_toEndOf="@id/txt_perevod"
                 app:layout_constraintStart_toStartOf="@id/txt_perevod"
