--- a/app/src/main/res/layout/popular_country_item.xml
+++ b/app/src/main/res/layout/popular_country_item.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/background_cadrview"
     android:layout_margin="12dp">
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="125dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="1dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
